--- a/main.css
+++ b/main.css
@@ -58,6 +58,9 @@ header {
     flex-direction: column;
     gap: 1rem;
     align-items: flex-start;
+    padding-inline: 2rem;
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
 .nav-list {
@@ -84,6 +87,8 @@ header {
 
 main {
     padding: 2rem;
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
 .pokemon {
@@ -98,8 +103,20 @@ main {
 
 .pokemon-todos {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 1rem;
+}
+
+@media screen and (min-width: 600px){
+    .pokemon-todos{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (min-width: 870px){
+    .pokemon-todos{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 }
 
 .pokemon-id-back {
